# khmer-coeng-tada-corrector

./: .gitignore  LICENSE  README.md  khmerdict.txt  main.py  pyproject.toml
artifacts/: config.json  holdout_words.json  metrics.json  metrics_bigcorpus.json  model.pt  train_history.json  vocab.json
coengtada/: __init__.py  charset.py  data.py  evaluate.py  infer.py  lexicon.py  model.py  train.py
cpp/: build.sh  coengtada.hpp  main.cpp  wasm.cpp
scripts/: export_weights.py  prepare_data.py
tests/: test_cpp_parity.py  test_smoke.py
web/: app.js  ctda.js  ctda.wasm  index.html  test_node.mjs
